fixed major alignment issue

--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ body {
   font-size: 4rem;
   line-height: 1.1;
   margin-bottom: 0;
+  margin-left: -1px;/*my ocd wont allow */
   text-align: left;
 }
 
